raneys: rewrite sect 3 intro to random sequences.
This resets the context in which we'll work there.

--- a/raneys_lemmas/raneys_lemmas.html
+++ b/raneys_lemmas/raneys_lemmas.html
@@ -171,6 +171,10 @@
       \]</span></p>
       <p>The final sequence has 3 positive elements, so we can't perform any more contractions. We have freedom in the order in which we execute those contractions, but the end result is independent of this order. Note that, although we've highlighted the subsequence structure here, we don't need to be aware of that structure to execute the contractions.</p>
       <h1 id="random-sequences"><span class="header-section-number">3</span> Random sequences</h1>
+      <p>(NOTE This section is kind of messed up currently while I fix some major plot holes.)</p>
+      <p>In this section, we'll consider a finite sequence <span class="math">\(s = \langle s_1, \ldots, s_n\rangle\)</span> whose elements <span class="math">\(s_i\)</span> are independent random variables, each uniformly distributed in the interval <span class="math">\([-1, 1]\)</span>. These are the partial sums of the sequence <span class="math">\(x_i = s_i - s_{i-1}\)</span>, where we define <span class="math">\(s_0 = 0\)</span>.</p>
+      <hr />
+      <p>(TODO stuff below here will be heavily edited or rewritten altogether.)</p>
       <p>In this section, we'll consider a finite sequence <span class="math">\(x\)</span> of length <span class="math">\(n\)</span> whose elements <span class="math">\(x_i\)</span> are independent random variables, each uniformly distributed in the interval <span class="math">\([-1, 1]\)</span>.</p>
       <p>The partial sums of such a sequence have two interesting properties:</p>
       <ol style="list-style-type: decimal">
