--- a/raneys_lemmas/raneys_lemmas.html
+++ b/raneys_lemmas/raneys_lemmas.html
@@ -190,10 +190,12 @@
       <li>that permutation elements separated by a swap have the same probability.</li>
       </ol>
       <p>In other words, the claim holds for any sequence <span class="math">\(s_i\)</span> whose elements are chosen independently using the same probability distribution in which all individual elements have probability zero. Choosing <span class="math">\(s_i\)</span> uniformly from <span class="math">\((0, 1]\)</span> is just one example of a probability space that meets these conditions.</p>
+      <p>Armed with this characterization of uniformly random permutations, we're ready to find the expected value of <span class="math">\(\sigma(x)\)</span>. To do so, it will be useful to define the <span class="math">\(n^\text{th}\)</span> <em>harmonic number</em> <span class="math">\(H_n\)</span> as <span class="math">\(\sum_{i=1}^n1/i\)</span>.</p>
+      <p><strong>Property 7</strong>  <em>Suppose that the random sequence <span class="math">\(s\)</span> is determined by independently choosing each <span class="math">\(s_i\)</span> uniformly from <span class="math">\((0, 1]\)</span> for each <span class="math">\(i\)</span> with <span class="math">\(1 \le i \le n\)</span>; suppose also that <span class="math">\(x_i = s_i - s_{i-1}\)</span>, where <span class="math">\(1 \le i \le n\)</span> and <span class="math">\(s_0 = 0\)</span>. Then the expected value of <span class="math">\(\sigma(x)\)</span> is <span class="math">\(H_n\)</span>.</em></p>
       <hr />
       <p>(TODO stuff below here will be heavily edited or rewritten altogether.)</p>
       <p>In this section, we'll consider a finite sequence <span class="math">\(x\)</span> of length <span class="math">\(n\)</span> whose elements <span class="math">\(x_i\)</span> are independent random variables, each uniformly distributed in the interval <span class="math">\([-1, 1]\)</span>.</p>
-      <p>The partial sums of such a sequence have two interesting properties:</p>
+      <p>the partial sums of such a sequence have two interesting properties:</p>
       <ol style="list-style-type: decimal">
       <li>If <span class="math">\(i \ne j\)</span>, then <span class="math">\(s_i \ne s_j\)</span> with probability 1.</li>
       <li><span class="math">\(\text{Prob}(s_i &gt; s_j)\)</span> = <span class="math">\(\text{Prob}(s_i &lt; s_j)\)</span>.</li>
