raneys: add commentary after property 10.

--- a/raneys_lemmas/raneys_lemmas.html
+++ b/raneys_lemmas/raneys_lemmas.html
@@ -244,6 +244,8 @@
       </tr>
       </tbody>
       </table>
+      <p>The ratio between consecutive values is, for <span class="math">\(n &gt; 1\)</span>, <span class="math">\[\frac{E_n}{E_{n-1}} = \frac{n}{n-1}\frac{2n-1}{2n}=\frac{n-1/2}{n-1}=1+\frac{1}{2n-2} &gt; 1,\]</span> so that they are indeed strictly increasing. In fact, since <span class="math">\(\sum_{1 &lt; k \le n} \frac{1}{2k-2}\to\infty\)</span> as <span class="math">\(n\to\infty\)</span>, we also have <span class="math">\(E_n = \frac{1}{2}\prod_{1 &lt; k \le n}\left( 1 + \frac{1}{2k-2}\right) \to \infty\)</span> as <span class="math">\(n\to\infty\)</span>.</p>
+      <p>Let's prove property 10, assuming for now that lemma 9 is true.</p>
       <hr />
       <p>(TODO add code that checks this; consider the case <span class="math">\(x_i\in[-1, 1]\)</span> but don't spend too much time on it if it's tricky)</p>
       <div class="references">
