--- a/self_repl_fns/images/scratch/ellsystem2.html
+++ b/self_repl_fns/images/scratch/ellsystem2.html
@@ -166,13 +166,21 @@
       var leafPts = []
 
       // This expects (dx, dy) to be a unit vector.
-      function drawSubtree(x, y, dx, dy, size, doDraw) {
+      function drawSubtree(x, y, dx, dy, size, doDraw, path) {
         if (doDraw == undefined) doDraw = true
+        if (path   == undefined) path = []
         assert(Math.abs(Math.sqrt(dx * dx + dy * dy) - 1) < 0.001)
         if (size < 10) {
           leafPts.push([x, y])
           return
         }
+
+        if (path.length >= 2 &&
+            (path[0] == 0 && path[1] == 1) ||
+            (path[0] == 1 && path[1] == 0)) {
+          return
+        }
+
         var x2 = x + size * dx
         var y2 = y + size * dy
         if (doDraw) {
@@ -181,9 +189,13 @@
         }
         var newDir
         newDir = rotatePt(dx, dy, treeAngle)
-        drawSubtree(x2, y2, newDir[0], newDir[1], 0.8 * size, doDraw)
+        path.push(0)
+        drawSubtree(x2, y2, newDir[0], newDir[1], 0.8 * size, doDraw, path)
+        path.pop()
         newDir = rotatePt(dx, dy, -treeAngle)
-        drawSubtree(x2, y2, newDir[0], newDir[1], 0.8 * size, doDraw)
+        path.push(1)
+        drawSubtree(x2, y2, newDir[0], newDir[1], 0.8 * size, doDraw, path)
+        path.pop()
       }
 
       /*
