--- a/self_repl_fns/template.html
+++ b/self_repl_fns/template.html
@@ -4,23 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>$title$</title>
     <script src='https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
-    <!--
-    <style>
-      body     { font-size: 120%; }
-      table    { margin: auto; }
-      code     { white-space: pre; }
-      q        { quotes: "“" "”" "‘" "’"; }
-      h1       { font-size: 1.5em; }
-      h2       { font-size: 1.17em; }
-      img      { width: 760px; }
-      .title   { font-size: 2em; font-weight: bold; }
-      .author  { color: #AAA; line-height: 150%; }
-      .date    { color: #AAA; line-height: 150%; font-size: 0.8em; }
-      .main    { width: 760px; margin: auto; }
-      .caption { text-align: center; }
-    </style>
-    -->
     <link rel="stylesheet" href="tufte-edited.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <div class="main">
